--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,31 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row ">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
-	<h1 class="display-4 text-success">It works</h1>
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-7 col-md-6 my-auto">
+                <h1 class="display-4 logo-front text-black">
+                    Bookings
+                </h1>
+                <div class="my-5">
+                    <h4>
+                        <button class="btn btn-black border border-black rounder-0" type="submit">
+                            <span class="icon">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </button>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
