Installed postgres and ready for heroku deploy

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,7 @@
                     </li>
                 </ul>
             </div>
+            {% include 'mobile-top-header.html' %}
         </div>
 	</header>
 
