--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,7 +24,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Make new booking</h5>
                                     <p class="card-text" style="text-center">Click here to make a new booking.</p>
-                                    <a href="#" class="btn btn-primary"><span><i class="fas fa-plus"></i></span></a>
+                                    <a href="{% url 'make_a_booking' %}" class="btn btn-primary"><span><i class="fas fa-plus"></i></span></a>
                                 </div>
                             </div>
                         </div>
